upd Eployee fields

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://postgres@localhost:5432/hr"
+DATABASE_URL="postgresql://destcable_user:ihS8PKLn8FSaiWuuuoTh0AXSVBUkIopf@dpg-crm7bujv2p9s739jd5mg-a.oregon-postgres.render.com/destcable"
