--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "graphql": "^16.9.0",
+    "i18n": "^0.15.1",
+    "i18next": "^23.15.1",
     "ra-data-graphql-simple": "^5.2.0",
+    "ra-i18n-polyglot": "^5.2.0",
     "react": "^18.3.1",
     "react-admin": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
